Fixed page height on mobile (at least android)

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+html {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     background-color: #191919;
     margin: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     color:  white;
     background-image: url('/assets/images/clouds.jpg');
